[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/GUI/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/CameraMovement.gd" type="Script" id=5]
[ext_resource path="res://scripts/WorldManager.gd" type="Script" id=7]

[node name="world" type="Node2D"]
script = ExtResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 320 )
current = true
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}
speed = 19.0

[node name="SeasonsTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Map" parent="." instance=ExtResource( 1 )]
[connection signal="game_paused" from="." to="HUD" method="_on_world_game_paused"]
[connection signal="new_season_start" from="." to="HUD" method="_on_world_new_season_start"]
[connection signal="timeout" from="SeasonsTimer" to="." method="_on_SeasonsTimer_timeout"]
